Added the assertj library

--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ dependencies {
 
     // Use JUnit test framework
     testCompile 'junit:junit:4.12'
+    testCompile 'org.assertj:assertj-core:3.9.1'
 }
 
 // In this section you declare where to find the dependencies of your project
